I would like to stop here. In retrospect, using line-clamp or text-wrap property would be better and flexible to use than using the line-breaking tag. I'll continue there another time.

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 */
 
 body {
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     /* 1 */
     line-height: inherit;
@@ -28,19 +29,11 @@ body {
 }
 
 p {
-    font-size: 1.5rem;
+    font-size: 2.2rem;
     font-weight: 400;
     line-height: 1.6;
     text-align: center;
     margin: auto;
-}
-
-h2 {
-    font-size: 2.2rem;
-    font-weight: 700;
-    line-height: 1.6;
-    margin: 3rem 0;
-    text-align: center;
 }
 
 /* SECTION */
@@ -59,13 +52,11 @@ section {
 
 .showcase img {
     height: auto;
-    max-width: 1250px;
+    width: 100vw;
+    padding-bottom: 2rem;
 }
 
-.showcase .container {
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 400;
-    font-size: 2.4rem;
+.showcase p {
     color: #C988C6;
 }
 
@@ -77,7 +68,7 @@ section {
 }
 
 /* ABOUT US Section */
- .about-us{
+.about-us{
     display: grid;
     grid-template-columns: 2fr 4fr;
     text-align: center;
@@ -85,7 +76,7 @@ section {
 }
 
 .about-us h2 {
-    font-size: 2.2rem;
+    font-size: 3rem;
     font-weight: 700;
     line-height: 1.6;
     background: linear-gradient(90deg, rgba(103, 58, 183, 0.66) 0%, rgba(158, 29, 29, 0.91) 100%);
@@ -93,12 +84,11 @@ section {
     background-clip: text; 
     color: transparent;
     margin: 3rem 0;
+    text-align: center;
 }
 
 .about-us p {
-    font-size: 1.5rem;
-    font-weight: 400;
-    line-height: 1.6;
+    font-size: 2.2rem;
 }
 
 .about-us img {
@@ -124,14 +114,19 @@ section {
 }
 
 .our-mission h2 {
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.6;
     background: linear-gradient(90deg, rgba(103, 58, 183, 0.66) 0%, rgba(158, 29, 29, 0.91) 100%);
     -webkit-background-clip: text; 
     background-clip: text; 
-    color: transparent; 
+    color: transparent;
+    margin: 3rem 0;
+    text-align: center;
 }
 
 .our-mission img {
-    max-width: 70%;
+    max-width: 100%;
     height: auto;
     margin: auto;
 }
@@ -150,18 +145,22 @@ section {
 }
 
 .our-mission .six-ladies {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 4fr 2fr;
     text-align: center;
-    padding-top: 3rem;
+    margin: auto;
+    padding: 6rem 0;
 }
 
 .our-mission .six-ladies img {
-    max-width: 70vw;
+    max-width: 100%;
     height: auto;
     margin: auto;
+}
+
+.our-mission .six-ladies .flex-1, .our-mission .four-women .flex-2 {
+    display: flex;
+    flex-direction: column;
 }
 
 .our-mission .four-women {
@@ -169,7 +168,6 @@ section {
     grid-template-columns: 2fr 4fr;
     text-align: center;
     margin: auto;
-    padding-top: 3rem;
 }
 
 /* This is the color of most of the headers. */
@@ -180,4 +178,94 @@ section {
     -webkit-background-clip: text; 
     background-clip: text; 
     color: transparent;
+}
+
+/* Tables responsiveness for the width of screen not greater than 760px */
+@media screen and (max-width: 760px) {
+    /* SECTION */
+    section {
+        margin: 2rem 0;
+    }
+    p {
+        font-size: 1.8rem;
+    }
+
+    .showcase p, .about-us p, .our-mission p, .events p {
+        font-size: 1.2rem;
+    }
+
+    .showcase h2, .about-us h2, .our-mission h2, .events h2 {
+        font-size: 2.4rem;
+    }
+
+    .about-us {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .our-mission img {
+        width: 100%;
+        height: 50vh;
+        margin: auto;
+    }
+
+    .our-mission .six-ladies, .our-mission .four-women {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .our-mission .four-women {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+/* Mobile responsiveness for the width of screen not greater than 460px */
+@media screen and (max-width: 460px) {
+    /* SECTION */
+    section {
+        margin: 2rem 0;
+    }
+    p {
+        font-size: 1.8rem;
+    }
+
+    .showcase p, .about-us p, .our-mission p, .events p {
+        font-size: 1.2rem;
+    }
+
+    .showcase h2, .about-us h2, .our-mission h2, .events h2 {
+        font-size: 2.4rem;
+    }
+
+    .about-us {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .our-mission img {
+        width: 100%;
+        height: 50vh;
+        margin: auto;
+    }
+
+    .our-mission .six-ladies, .our-mission .four-women {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .our-mission .four-women {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
 }
